// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/admin/store POST /admin/store fails to update default currency if not in store currencies 1`] = `
Object {
  "message": "Store does not have currency: eur",
  "type": "invalid_data",
}
`;

exports[`/admin/store POST /admin/store successfully updates and store currencies 1`] = `
Object {
  "created_at": Any<String>,
  "currencies": Array [
    Object {
      "code": "jpy",
      "name": "Japanese Yen",
      "symbol": "¥",
      "symbol_native": "￥",
    },
    Object {
      "code": "usd",
      "name": "US Dollar",
      "symbol": "$",
      "symbol_native": "$",
    },
  ],
  "default_currency_code": "usd",
  "default_location_id": null,
  "id": Any<String>,
  "invite_link_template": null,
  "metadata": null,
  "name": "Medusa Store",
  "payment_link_template": null,
  "swap_link_template": null,
  "updated_at": Any<String>,
}
`;

exports[`/admin/store POST /admin/store successfully updates default currency and store currencies 1`] = `
Object {
  "created_at": Any<String>,
  "currencies": Array [
    Object {
      "code": "jpy",
      "name": "Japanese Yen",
      "symbol": "¥",
      "symbol_native": "￥",
    },
    Object {
      "code": "usd",
      "name": "US Dollar",
      "symbol": "$",
      "symbol_native": "$",
    },
  ],
  "default_currency": Object {
    "code": "jpy",
    "name": "Japanese Yen",
    "symbol": "¥",
    "symbol_native": "￥",
  },
  "default_currency_code": "jpy",
  "default_location_id": null,
  "id": Any<String>,
  "invite_link_template": null,
  "metadata": null,
  "name": "Medusa Store",
  "payment_link_template": null,
  "swap_link_template": null,
  "updated_at": Any<String>,
}
`;

exports[`/admin/store POST /admin/store successfully updates default currency code 1`] = `
Object {
  "created_at": Any<String>,
  "currencies": Array [
    Object {
      "code": "usd",
      "name": "US Dollar",
      "symbol": "$",
      "symbol_native": "$",
    },
    Object {
      "code": "dkk",
      "name": "Danish Krone",
      "symbol": "Dkr",
      "symbol_native": "kr",
    },
  ],
  "default_currency": Object {
    "code": "dkk",
    "name": "Danish Krone",
    "symbol": "Dkr",
    "symbol_native": "kr",
  },
  "default_currency_code": "dkk",
  "default_location_id": null,
  "id": Any<String>,
  "invite_link_template": null,
  "metadata": null,
  "name": "Medusa Store",
  "payment_link_template": null,
  "swap_link_template": null,
  "updated_at": Any<String>,
}
`;

exports[`/admin/store Store creation has created store with default currency 1`] = `
Object {
  "created_at": Any<String>,
  "currencies": Array [
    Object {
      "code": "usd",
      "name": "US Dollar",
      "symbol": "$",
      "symbol_native": "$",
    },
  ],
  "default_currency": Object {
    "code": "usd",
    "name": "US Dollar",
    "symbol": "$",
    "symbol_native": "$",
  },
  "default_currency_code": "usd",
  "default_location_id": null,
  "feature_flags": Any<Array>,
  "fulfillment_providers": Array [
    Object {
      "id": "test-ful",
      "is_installed": true,
    },
  ],
  "id": Any<String>,
  "invite_link_template": null,
  "metadata": null,
  "modules": Any<Array>,
  "name": "Medusa Store",
  "payment_link_template": null,
  "payment_providers": Array [
    Object {
      "id": "test-pay",
      "is_installed": true,
    },
  ],
  "swap_link_template": null,
  "updated_at": Any<String>,
}
`;
